--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,7 +18,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+      run: |
+        cd silk_rail
+        composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
